improved DeployManager servlet class